# Deepak

./: .gitignore  README.md
custom_cmake_ws/: .gitignore
custom_cmake_ws/src/one_cmake_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/my_robot_description/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/my_robot_description/config/: ros2_controllers.yaml
ros2_ws/src/my_robot_description/launch/: bringup.launch.py  display.launch.py
ros2_ws/src/my_robot_description/urdf/: common_properties.xacro  mobile_base.xacro
slam_ws/src/twheel_robo_pkg/: CMakeLists.txt  README.md  package.xml
slam_ws/src/twheel_robo_pkg/config/: robot.rviz
slam_ws/src/twheel_robo_pkg/launch/: display.launch.py  gazebo.launch.py
slam_ws/src/twheel_robo_pkg/urdf/: my_robot.urdf.xacro
slam_ws/src/twheel_robo_pkg/worlds/: my_world.sdf  my_world.world
src/cafe_butler_sim/: package.xml  remove_emojis.py  setup.cfg  setup.py
src/cafe_butler_sim/cafe_butler_sim/: __init__.py  butler_controller.py  butler_robot.py  map_builder.py  order_client.py  order_table1.py  order_table2.py  order_table3.py  table1_controller.py  table2_controller.py  table3_controller.py
src/cafe_butler_sim/config/: cafe_map.pgm  cafe_map.yaml  cafe_rviz.rviz  config.yaml  generate_map.py  nav2_params.yaml
src/cafe_butler_sim/launch/: cafe_simulation.launch.py  controllers.launch.py
src/cafe_butler_sim/urdf/: cafe_butler_robot.urdf.xacro
src/cafe_butler_sim/world/: cafe.world
src/coffee_shop_butler/: CMakeLists.txt  DOCUMENTATION.md  package.xml
src/coffee_shop_butler/coffee_shop_butler/: __init__.py  butler_node.py  order_manager_node.py
src/coffee_shop_butler/config/: waypoints.yaml
src/coffee_shop_butler/launch/: butler.launch.py
src/coffee_shop_sim/: CMakeLists.txt  package.xml
src/coffee_shop_sim/config/: coffee_shop_rviz.rviz  nav2_params.yaml
src/coffee_shop_sim/launch/: coffee_shop.launch.py
src/coffee_shop_sim/maps/: coffee_shop_map.pgm  coffee_shop_map.yaml
src/coffee_shop_sim/urdf/: coffee_shop_robot.urdf.xacro
src/coffee_shop_sim/worlds/: coffee_shop.world
turtle_catch_ws/src/turtle_catching/: package.xml  setup.cfg  setup.py
turtle_catch_ws/src/turtle_catching/turtle_catching/: catch.py  spawn.py
