<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cafe_butler_sim</name>
  <version>1.0.0</version>
  <description>ROS 2 Jazzy Cafe Butler Robot Simulation – 7 delivery scenarios with Nav2 and Gazebo</description>
  <maintainer email="deepak33@todo.todo">deepak33</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Python runtime -->
  <depend>rclpy</depend>

  <!-- Messages -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>tf2_msgs</depend>

  <!-- Navigation -->
  <depend>nav2_bringup</depend>
  <depend>nav2_common</depend>

  <!-- Simulation & Bridges -->
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>

  <!-- Robot description -->
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>

  <!-- Visualisation -->
  <depend>rviz2</depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
